--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 			<div class="widget-contact">
 				<h3>Highlights </h3>
 				<div class="text-left">
-					<p> International Museum and Library of Bologna, Italy: Mists, Tribute to Respighi with Violinist Jameson Cooper and pianist Eli Kalman, May 2019</p>
+					<p> International Museum and Library of Bologna, Italy: "Mists, Tribute to Respighi" with Violinist Jameson Cooper and pianist Eli Kalman, May 2019</p>
 					<p> UW Oshkosh, "A Violin's Life", Violinist Frank Almond, the Lipinski Stradivarius & Eli Kalman, March 2015</p>
 					<p> Carnegie Hall Weill: Tubist Marty Erickson and pianist Eli Kalman, March 2013</p>
 					<p> Kennedy Center Terrace Theater: Cellist Amit Peled and pianist Eli Kalman, January 2011</p>
