--- a/index.html
+++ b/index.html
@@ -416,9 +416,15 @@
 			</div>
 		</div>
     
+            
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 		<img src="img/performances/carnegie.png" alt="Eli Kalman piano" style="width:450px;height:300px" class="img-responsive" />
 		</div>
+		<!--
+		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		   <iframe width="1120" height="630" src="https://www.youtube.com/embed/2RcAmuL1UW8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+		-->
 		
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 			<div class="widget-contact">
@@ -432,7 +438,7 @@
 					<p> Peabody Institute at John Hopkins: Cellist Amit Peled and pianist Eli Kalman, October 2009</p>
 					<p> San Francisco Performances: Cellist Amit Peled and pianist Eli Kalman, March 2009</p>				
 				</div>
-			</div>	
+				</div>	
 		</div>
     </div>	
 
